--- a/src/app/ideation/components/ideabox/ideabox.component.scss
+++ b/src/app/ideation/components/ideabox/ideabox.component.scss
@@ -47,6 +47,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 32px;
+        position: relative;
         width: 32px;
         height: 32px;
         margin-left: -10px;
@@ -84,6 +85,7 @@
       }
 
       .btn_small_plain {
+        position: relative;
         padding: 0;
       }
 
@@ -104,6 +106,7 @@
 
       .like_counter_wrap {
         padding: 8px;
+        position: relative;;
         color: var(--color-text);
       }
       &.selected {
