--- a/src/app/shared/components/cos-input/cos-input.component.html
+++ b/src/app/shared/components/cos-input/cos-input.component.html
@@ -1,4 +1,5 @@
 <div class="cos_input_wrap">
-  <div class="cos_input_placeholder" [innerHTML]="placeholder"></div>
+  <div *ngIf="placeholder" class="cos_input_placeholder" [innerHTML]="placeholder"></div>
+  <div *ngIf="limit" class="cos_limit_placeholder" [innerHTML]="limit"></div>
   <ng-content></ng-content>
 </div>
