--- a/src/app/ideation/components/edit-ideation-deadline/edit-ideation-deadline.component.html
+++ b/src/app/ideation/components/edit-ideation-deadline/edit-ideation-deadline.component.html
@@ -26,8 +26,10 @@
       <div class="dialog_description" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_EDIT_IDEATION_DEADLINE_DESC"></div>
       <div class="deadline_wrap">
         <div class="date_row">
-          <span class="deadline bold" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_DEADLINE"></span>
-          <span class="deadline bold" *ngIf="deadline">{{deadline | date: 'YYYY-MM-dd HH:mm'}}</span>
+          <span class="deadline bold"  *ngIf="deadline" >{{deadline | date: 'YYYY-MM-dd HH:mm'}}({{getTimeZoneName(this.endsAt.timezone)}})</span>
+        </div>
+        <div class="date_row">
+          <span class="deadline" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE"></span>
         </div>
         <div class="date_row">
           <div class="bold date_row_title" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME">
@@ -67,7 +69,7 @@
             </div>
           </div>
         </div>
-        <div class="date_row">
+        <!--div class="date_row">
           <div class="date_row_title bold" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIMEZONE">
           </div>
           <div class="input_wrap">
@@ -88,7 +90,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </!--div-->
         <cos-calender [minDate]="datePickerMin" [(date)]="endsAt.date" (click)="setEndsAtTime()" [class]="'ideation'"></cos-calender>
       </div>
       <!--ng-container>
