--- a/src/app/voting/components/vote-create/vote-create.component.html
+++ b/src/app/voting/components/vote-create/vote-create.component.html
@@ -266,10 +266,13 @@
                 <div class="block_content image_content">
                   <div class="block_section" *ngIf="!(topic.imageUrl || tmpImageUrl)">
                     <div>
-                      <div class="bold" translate="VIEWS.VOTE_CREATE.HEADER_IMAGE_UPLOAD_DESC"><div class="tooltip" tooltip>
-                        <div class="content_title">Help on its way</div>
-                        <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-                      </div></div>
+                      <div class="bold" translate="VIEWS.VOTE_CREATE.HEADER_IMAGE_UPLOAD_DESC">
+                        <div class="tooltip" tooltip>
+                          <div class="content_title">Help on its way</div>
+                          <div class="content_description">Help text coming soon! Please tell us what help you were
+                            looking for.</div>
+                        </div>
+                      </div>
                       <div translate="VIEWS.VOTE_CREATE.HEADER_IMAGE_UPLOAD_DESC_TEXT"></div>
                     </div>
                     <input id="image_upload_input" type="file" #imageUpload (change)="fileUpload()"
@@ -323,8 +326,8 @@
               </div>
               <ng-container *ngIf="block.title || topic.title">
                 <div class="block_content">
-                  <input id="title_input" #topicTitle placeholder="..." [(ngModel)]="topic.title" [maxlength]="titleLimit"
-                    [disabled]="!TopicService.canEditDescription(topic)"
+                  <input id="title_input" #topicTitle placeholder="..." [(ngModel)]="topic.title"
+                    [maxlength]="titleLimit" [disabled]="!TopicService.canEditDescription(topic)"
                     [ngClass]="{'disabled': !TopicService.canEditDescription(topic)}" />
                 </div>
               </ng-container>
@@ -350,8 +353,8 @@
               </div>
               <ng-container *ngIf="block.intro || topic.intro">
                 <div class="block_content">
-                  <textarea id="intro_input" #topicIntro placeholder="..." [(ngModel)]="topic.intro" [maxlength]="introLimit"
-                    [disabled]="!TopicService.canEditDescription(topic)"
+                  <textarea id="intro_input" #topicIntro placeholder="..." [(ngModel)]="topic.intro"
+                    [maxlength]="introLimit" [disabled]="!TopicService.canEditDescription(topic)"
                     [ngClass]="{'disabled': !TopicService.canEditDescription(topic)}"></textarea>
                 </div>
               </ng-container>
@@ -361,10 +364,13 @@
               [@openClose]="block.description ? 'open' : 'closed'">
               <div class="block_title_wrap" (click)="block.description = true;">
                 <div>
-                  <div class="block_title" translate="VIEWS.VOTE_CREATE.TITLE_DESCRIPTION"><div class="tooltip" tooltip>
-                    <div class="content_title">Help on its way</div>
-                    <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-                  </div></div>
+                  <div class="block_title" translate="VIEWS.VOTE_CREATE.TITLE_DESCRIPTION">
+                    <div class="tooltip" tooltip>
+                      <div class="content_title">Help on its way</div>
+                      <div class="content_description">Help text coming soon! Please tell us what help you were looking
+                        for.</div>
+                    </div>
+                  </div>
                   <!--div *ngIf="!block.description" translate="VIEWS.VOTE_CREATE.TITLE_DESCRIPTION_TEXT"></!--div-->
                 </div>
                 <div class="counter_wrap">
@@ -390,7 +396,7 @@
                     <!--textarea id="description_input" placeholder="..." [(ngModel)]="topic.description"
                 [maxlength]="introLimit"></!--textarea-->
                     <iframe cosEtherpad frameborder="0" scrolling="no" [ngClass]="{hidden: !topic.padUrl}"
-                  [src]="sanitizeURL()" width="100%" height="600"></iframe>
+                      [src]="sanitizeURL()" width="100%" height="600"></iframe>
 
                   </div>
                 </ng-container>
@@ -487,15 +493,21 @@
                   </div>
 
                   <div class="small_heading" translate="VIEWS.VOTE_CREATE.SETTINGS_HEADING_VISIBILITY"></div>
-                  <div class="mobile_hidden" translate="VIEWS.VOTE_CREATE.SETTINGS_VISIBILITY_DESC"><div class="tooltip" tooltip>
-                    <div class="content_title">Help on its way</div>
-                    <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-                  </div></div>
+                  <div class="mobile_hidden" translate="VIEWS.VOTE_CREATE.SETTINGS_VISIBILITY_DESC">
+                    <div class="tooltip" tooltip>
+                      <div class="content_title">Help on its way</div>
+                      <div class="content_description">Help text coming soon! Please tell us what help you were looking
+                        for.</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="mobile_show" translate="VIEWS.VOTE_CREATE.SETTINGS_VISIBILITY_DESC"><div class="tooltip" tooltip>
-                  <div class="content_title">Help on its way</div>
-                  <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-                </div></div>
+                <div class="mobile_show" translate="VIEWS.VOTE_CREATE.SETTINGS_VISIBILITY_DESC">
+                  <div class="tooltip" tooltip>
+                    <div class="content_title">Help on its way</div>
+                    <div class="content_description">Help text coming soon! Please tell us what help you were looking
+                      for.</div>
+                  </div>
+                </div>
 
                 <div class="row_wrap">
                   <div class="radio_wrap" (click)="topic.visibility = VISIBILITY.private"
@@ -570,10 +582,13 @@
 
                   </a>
                 </div>
-                <div class="small_heading" translate="VIEWS.VOTE_CREATE.SETTINGS_HEADING_LOCALITY"><div class="tooltip" tooltip>
-                  <div class="content_title">Help on its way</div>
-                  <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-                </div></div>
+                <div class="small_heading" translate="VIEWS.VOTE_CREATE.SETTINGS_HEADING_LOCALITY">
+                  <div class="tooltip" tooltip>
+                    <div class="content_title">Help on its way</div>
+                    <div class="content_description">Help text coming soon! Please tell us what help you were looking
+                      for.</div>
+                  </div>
+                </div>
                 <div translate="VIEWS.VOTE_CREATE.SETTINGS_LOCALITY_SELECT_DESC"></div>
                 <div class="row_wrap">
                   <div class="dropdown" [cosDropdown]>
@@ -643,10 +658,13 @@
                   <div class="number_wrap mobile_show">
                     <div>3</div>
                   </div>
-                  <div class="small_heading" translate="VIEWS.VOTE_CREATE.SETTINGS_HEADING_ADD_TO_GROUP"><div class="tooltip" tooltip>
-                    <div class="content_title">Help on its way</div>
-                    <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-                  </div></div>
+                  <div class="small_heading" translate="VIEWS.VOTE_CREATE.SETTINGS_HEADING_ADD_TO_GROUP">
+                    <div class="tooltip" tooltip>
+                      <div class="content_title">Help on its way</div>
+                      <div class="content_description">Help text coming soon! Please tell us what help you were looking
+                        for.</div>
+                    </div>
+                  </div>
                   <div class="mobile_hidden" translate="VIEWS.VOTE_CREATE.SETTINGS_ADD_TO_GROUP_DESC"></div>
                 </div>
                 <div class="mobile_show" translate="VIEWS.VOTE_CREATE.SETTINGS_ADD_TO_GROUP_DESC"></div>
@@ -789,7 +807,7 @@
             </ng-container>
             <ng-container *ngIf="!topic.voteId && !vote.id">
               <topic-vote-create #vote_create_form [topic]="topic" [vote]="vote"
-              (saveVote)="saveVoteSettings($event)"></topic-vote-create>
+                (saveVote)="saveVoteSettings($event)"></topic-vote-create>
             </ng-container>
           </ng-container>
           <ng-container *ngIf="tabSelected==='preview'">
@@ -838,25 +856,10 @@
 
             <div class="vote_wrap">
               <div class="vote_header">
-                <div class="header_division">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M16 0C7.168 0 0 7.168 0 16C0 24.832 7.168 32 16 32C24.832 32 32 24.832 32 16C32 7.168 24.832 0 16 0ZM12.8889 24L25.3333 11.6491L23 9.33333L12.8889 19.3684L9 15.5088L6.66667 17.8246L12.8889 24Z"
-                      fill="#5AB467" />
-                  </svg>
-                  <div class="vote_question">{{vote.description}}</div>
-                </div>
-                <div class="header_division">
-                  <div class="vote_deadline" *ngIf="vote.endsAt">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M8 2C7.44772 2 7 2.44772 7 3V4H6C4.89543 4 4 4.89543 4 6V18C4 19.1046 4.89543 20 6 20H18C19.1046 20 20 19.1046 20 18V6C20 4.89543 19.1046 4 18 4H17V3C17 2.44772 16.5523 2 16 2C15.4477 2 15 2.44772 15 3V4H9V3C9 2.44772 8.55228 2 8 2ZM6 8H18V18H6V8ZM9 6V5H7V6H9ZM17 5V6H15V5H17ZM11.0332 9.55428C11.0152 9.25392 11.2438 9 11.5322 9H12.4678C12.7562 9 12.9848 9.25392 12.9668 9.55428L12.5293 13.5108C12.5128 13.7858 12.2943 14 12.0303 14H11.9697C11.7057 14 11.4872 13.7858 11.4707 13.5108L11.0332 9.55428ZM13 15.9565C13 16.5328 12.5523 17 12 17C11.4477 17 11 16.5328 11 15.9565C11 15.3802 11.4477 14.913 12 14.913C12.5523 14.913 13 15.3802 13 15.9565Z"
-                        fill="#2C3B47" />
-                    </svg>
-                    <span class="bold">{{vote.endsAt | date:'YYYY-MM-dd HH:mm'}}</span>
-                  </div>
+                <div class="header_section">
+                  <div class="question">{{vote.description}}</div>
                   <div class="setting_button dropdown button_dropdown">
-                    <button class="btn_medium_plain">
+                    <button class="btn_medium_close mobile_hidden">
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M14 6C14 4.9 13.1 4 12 4C10.9 4 10 4.9 10 6C10 7.1 10.9 8 12 8C13.1 8 14 7.1 14 6ZM14 18C14 16.9 13.1 16 12 16C10.9 16 10 16.9 10 18C10 19.1 10.9 20 12 20C13.1 20 14 19.1 14 18ZM12 10C13.1 10 14 10.9 14 12C14 13.1 13.1 14 12 14C10.9 14 10 13.1 10 12C10 10.9 10.9 10 12 10Z"
@@ -864,6 +867,36 @@
                       </svg>
                       <span translate="COMPONENTS.TOPIC_VOTE_CAST.BTN_VOTE_ACTIONS"></span>
                     </button>
+                    <button id="mobile_actions" class="btn_medium_close icon mobile_show">
+                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M14 6C14 4.9 13.1 4 12 4C10.9 4 10 4.9 10 6C10 7.1 10.9 8 12 8C13.1 8 14 7.1 14 6ZM14 18C14 16.9 13.1 16 12 16C10.9 16 10 16.9 10 18C10 19.1 10.9 20 12 20C13.1 20 14 19.1 14 18ZM12 10C13.1 10 14 10.9 14 12C14 13.1 13.1 14 12 14C10.9 14 10 13.1 10 12C10 10.9 10.9 10 12 10Z"
+                          fill="#2C3B47" />
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+                <div class="data_section">
+                  <div class="data_cell">
+                    <div class="title" translate="COMPONENTS.TOPIC_VOTE_CAST.LBL_DEADLINE"></div>
+                    <div class="data_item" *ngIf="vote.endsAt">
+                      <span class="bold">{{(vote.endsAt)?
+                        (vote.endsAt | date:'YYYY-MM-dd HH:mm') : ('COMPONENTS.TOPIC_VOTE_CAST.NO_DEADLINE' |
+                        translate)}}</span>
+                      <a translate="COMPONENTS.TOPIC_VOTE_CAST.OPT_SEND_VOTE_REMINDER"></a>
+                    </div>
+                  </div>
+                  <div class="data_cell">
+                    <div class="title" translate="COMPONENTS.TOPIC_VOTE_CAST.LBL_VOTES"></div>
+                    <div class="data_item">
+                      <span class="bold">{{vote.votersCount || 0}}</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="data_section">
+                  <div class="data_cell">
+                    <div class="info_text" [innerHtml]="'COMPONENTS.TOPIC_VOTE_CAST.LBL_INFO_RESULTS_ADMIN'| translate">
+                    </div>
                   </div>
                 </div>
               </div>
@@ -935,11 +968,10 @@
               <button *ngIf="topic.status === TopicService.STATUSES.draft" class="btn_medium_secondary"
                 (click)="saveAsDraft()" translate="VIEWS.VOTE_CREATE.FOOTER_BTN_SAVE_AS_DRAFT">
               </button>
-              <button *ngIf="!isnew && topic.status !== TopicService.STATUSES.draft" class="btn_medium_submit icon" (click)="publish();"
-              translate="VIEWS.VOTE_CREATE.FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH"></button>
+              <button *ngIf="!isnew && topic.status !== TopicService.STATUSES.draft" class="btn_medium_submit icon"
+                (click)="publish();" translate="VIEWS.VOTE_CREATE.FOOTER_BTN_SAVE_CHANGES_AND_PUBLISH"></button>
               <button *ngIf="(isnew || topic.status === TopicService.STATUSES.draft) && tabSelected === 'preview'"
-                class="btn_medium_submit publish icon"
-                (click)="publish()"
+                class="btn_medium_submit publish icon" (click)="publish()"
                 [ngClass]="{disabled: !TopicService.canDelete(topic)}">
                 <span class="btn_text"
                   [translate]="(topic.status === TopicService.STATUSES.draft)?'VIEWS.VOTE_CREATE.FOOTER_BTN_CREATE': 'VIEWS.VOTE_CREATE.FOOTER_BTN_SAVE_CHANGES'"></span>
@@ -984,10 +1016,10 @@
                       fill="#2C3B47" />
                   </svg>
                 </button>
-                <button class="btn_medium_submit icon tablet_hidden" (click)="nextTab(tabSelected)" *ngIf="!isnew && topic.status !== TopicService.STATUSES.draft"
+                <button class="btn_medium_submit icon tablet_hidden" (click)="nextTab(tabSelected)"
+                  *ngIf="!isnew && topic.status !== TopicService.STATUSES.draft"
                   [ngClass]="{disabled: isNextDisabled(tabSelected) || tabSelected === 'preview'}">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M14.5467 6.31262C14.1471 5.89579 13.4991 5.89579 13.0994 6.31262C12.6997 6.72945 12.6997 7.40527 13.0994 7.8221L16.0816 11L6 11C5.43478 11 5 11.4108 5 12.0003C5 12.5897 5.43478 12.9824 6 12.9824L16.0816 12.9824L13.0994 16.1779C12.6997 16.5947 12.6997 17.2705 13.0994 17.6874C13.4991 18.1042 14.1471 18.1042 14.5467 17.6874L20 12L14.5467 6.31262Z"
                       fill="white" />
@@ -1005,7 +1037,8 @@
                   </svg>
                 </button>
                 <button *ngIf="topic.status === TopicService.STATUSES.draft" class="btn_medium_secondary tablet_hidden"
-                  (click)="saveAsDraft()" translate="VIEWS.VOTE_CREATE.FOOTER_BTN_SAVE_AS_DRAFT" [ngClass]="{disabled: isNextDisabled(tabSelected)}">
+                  (click)="saveAsDraft()" translate="VIEWS.VOTE_CREATE.FOOTER_BTN_SAVE_AS_DRAFT"
+                  [ngClass]="{disabled: isNextDisabled(tabSelected)}">
                 </button>
                 <button class="btn_medium_submit icon tablet_hidden" (click)="(tabSelected!=='preview' && topic.status === TopicService.STATUSES.draft)?
                   nextTab(tabSelected) : publish()" [ngClass]="{disabled: isNextDisabled(tabSelected)}">
