--- a/src/app/ideation/components/idea/idea-dialog.component.scss
+++ b/src/app/ideation/components/idea/idea-dialog.component.scss
@@ -19,7 +19,7 @@
   }
 }
 
-.notification_top  {
+.notification_top {
   .narrow {
     width: 696px;
   }
@@ -30,6 +30,25 @@
   align-items: center;
   @include mixins.mobile {
     background-color: var(--color-background);
+  }
+}
+
+.mobile_buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 56px;
+
+  .mobile_buttons_left {
+    display: flex;
+    gap: 16px;
+    padding: 8px;
+  }
+  .mobile_buttons_right {
+    display: flex;
+    align-items: center;
+    height: 56px;
+    padding: 8px;
   }
 }
 .buttons_left,
@@ -58,6 +77,10 @@
 .like_wrap {
   display: flex;
   align-items: center;
+
+  @include mixins.mobile {
+    align-items: initial;
+  }
 
   .btn_idea_like {
     width: 32px;
@@ -101,6 +124,7 @@
   gap: 24px;
   @include mixins.mobile {
     max-width: 100%;
+    padding: 16px;
   }
 }
 .idea_content_replies {
@@ -134,6 +158,21 @@
   .idea_header_left {
     display: flex;
     gap: 12px;
+
+    .name_wrap {
+      display: flex;
+      flex-direction: column;
+      .name {
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 16px;
+      }
+      .date {
+        font-size: 13px;
+        line-height: 16px;
+        color: #727C84;
+      }
+    }
     .avatar {
       display: flex;
       justify-content: center;
@@ -229,6 +268,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @include mixins.mobile {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    .buttons_wrap {
+      width: 100%;
+      gap: 8px;
+      button {
+        width: 100%;
+      }
+    }
+  }
+
   .btn_like_wrap {
     height: 44px;
     width: 88px;
@@ -242,7 +295,10 @@
     transition: all 200ms ease-in;
     justify-content: space-between;
     padding: 0;
-
+    @include mixins.mobile {
+      align-self: flex-start;
+      align-items: initial;
+    }
     &.selected {
       flex-direction: row-reverse;
       background-color: var(--color-ideation);
