--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -130,7 +130,10 @@
               <div class="date">{{idea.createdAt | date: 'YYYY-MM-dd HH:mm'}}</div>
             </div>
             <div class="vertical_line_separator"></div>
-            <button class="btn_small_plain icon" (click)="toggleFavourite()" *ngIf="(Auth.loggedIn$ | async)">
+            <button class="btn_small_plain" (click)="toggleFavourite()" *ngIf="(Auth.loggedIn$ | async)">
+              <div class="tooltip_item" tooltip pos="top" [noIcon]="true">
+                <div class="content_description" translate="COMPONENTS.IDEABOX.TOOLTIP_FAVOURITE" [translateParams]="{count: idea.votes.up.count}"></div>
+              </div>
               <svg *ngIf="!idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -274,7 +277,12 @@
 
               </div>
             </button>
-            <a class="like_counter_wrap" (click)="doShowVotersList()" [innerHTML]="idea.votes.up.count"></a>
+            <a class="like_counter_wrap" (click)="doShowVotersList()">
+              <div class="tooltip_item" tooltip pos="top" [noIcon]="true">
+                <div class="content_description" translate="COMPONENTS.IDEABOX.TOOLTIP_LIKE_COUNT" [translateParams]="{count: idea.votes.up.count}"></div>
+              </div>
+              <span [innerHTML]="idea.votes.up.count"></span>
+            </a>
           </div>
           <!--button class="btn_like_wrap" [ngClass]="{selected: this.idea.votes.up.selected, disabled: !canVote()}"
             (click)="doIdeaVote(1)">
