--- a/src/app/core/components/create/create.component.html
+++ b/src/app/core/components/create/create.component.html
@@ -1,4 +1,5 @@
 <div id="create_menu">
+  <div class="heading_small" translate="COMPONENTS.CREATE.HEADING"></div>
   <div class="create_menu_item" [routerLink]="['/', translate.currentLang, 'topics', 'ideation', 'create']"
     routerLinkActive="active" dialog-close>
     <div class="left_wrap">
