--- a/src/app/topic/components/topic-arguments/topic-arguments.component.scss
+++ b/src/app/topic/components/topic-arguments/topic-arguments.component.scss
@@ -79,6 +79,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    border-radius: 0 0 16px 16px;
 
     .section_header {
       display: flex;
