--- a/src/app/topic/components/topic-milestones/topic-milestones.component.html
+++ b/src/app/topic/components/topic-milestones/topic-milestones.component.html
@@ -7,7 +7,11 @@
           d="M18.5246 10.0392L18.1335 8H9.3335V25.3333H11.2891V18.1961H16.7646L17.1557 20.2353H24.0002V10.0392H18.5246Z"
           fill="white" />
       </svg>
-      <div class="follow_up_title" translate="COMPONENTS.TOPIC_MILESTONES.CREATE_A_MILESTONE"></div>
+      <div class="follow_up_title" translate="COMPONENTS.TOPIC_MILESTONES.CREATE_A_MILESTONE">
+        <div class="tooltip" tooltip>
+          <div class="content_description" translate="COMPONENTS.TOPIC_MILESTONES.TOOLTIP_CREATE"></div>
+        </div>
+      </div>
     </div>
     <!--div class="header_division">
       <div class="follow_up_deadline">
