--- a/src/app/ideation/components/edit-ideation-deadline/edit-ideation-deadline.component.html
+++ b/src/app/ideation/components/edit-ideation-deadline/edit-ideation-deadline.component.html
@@ -26,7 +26,7 @@
       <div class="dialog_description" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_EDIT_IDEATION_DEADLINE_DESC"></div>
       <div class="deadline_wrap">
         <div class="date_row">
-          <span class="deadline bold"  *ngIf="deadline" >{{deadline | date: 'YYYY-MM-dd HH:mm'}}({{getTimeZoneName(this.endsAt.timezone)}})</span>
+          <span class="deadline bold"  *ngIf="deadline" >{{deadline | date: 'YYYY-MM-dd HH:mm'}}</span>
         </div>
         <div class="date_row">
           <span class="deadline" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE"></span>
@@ -69,54 +69,8 @@
             </div>
           </div>
         </div>
-        <!--div class="date_row">
-          <div class="date_row_title bold" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIMEZONE">
-          </div>
-          <div class="input_wrap">
-            <div class="dropdown" [cosDropdown]>
-              <div class="selection">
-                <div class="selected_item">
-                  {{getTimeZoneName(endsAt.timezone)}}
-                </div>
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M17 10L12 15L7 10" stroke="#727C84" stroke-width="2" stroke-linecap="round" />
-                </svg>
-              </div>
-              <div class="options">
-                <div class="option" *ngFor="let zone of timezones" [ngClass]="zone === endsAt.timezone ? 'bold' : ''"
-                  (click)="endsAt.timezone = zone.value;setEndsAtTime();">
-                  {{zone.name}}
-                </div>
-              </div>
-            </div>
-          </div>
-        </!--div-->
         <cos-calender [minDate]="datePickerMin" [(date)]="endsAt.date" (click)="setEndsAtTime()" [class]="'ideation'"></cos-calender>
       </div>
-      <!--ng-container>
-        <div id="form_area">
-          <div class="content_section">
-            <div class="section_content_wrap">
-
-              <div class="radio_wrap date_selector" [ngClass]="deadline ? 'selected': ''"  (click)="(!deadline)? toggleDeadline(): ''; $event.stopPropagation();">
-                <div class="radio_text_wrap date_selector">
-                  <div class="radio_lable_wrap">
-                    <label class="checkbox" (click)="(deadline)? toggleDeadline(): ''; $event.stopPropagation();">
-                      <span class="deadline" *ngIf="deadline">{{deadline | amTimeAgo}}</span>
-                      <span class="bold" translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_OPTION_DEADLINE"></span>
-                      <input type="checkbox" [checked]="deadline"/>
-                      <span class="checkmark"></span>
-                    </label>
-                  </div>
-                  <div class="radio_description">
-                    <span translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_OPTION_DEADLINE_DESC"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </!--ng-container-->
     </div>
     <div class="dialog_footer with_buttons">
       <a dialog-close translate="COMPONENTS.EDIT_IDEATION_DEADLINE.LNK_CANCEL"></a>
