--- a/src/app/topic/components/topic-vote-deadline/topic-vote-deadline.component.html
+++ b/src/app/topic/components/topic-vote-deadline/topic-vote-deadline.component.html
@@ -26,7 +26,7 @@
       <div class="dialog_description" translate="COMPONENTS.TOPIC_VOTE_DEADLINE.LBL_EDIT_VOTING_DEADLINE_DESC"></div>
       <div class="deadline_wrap">
         <div class="date_row">
-          <span class="deadline bold" *ngIf="deadline">{{deadline | date: 'YYYY-MM-dd HH:mm'}} ({{getTimeZoneName(endsAt.timezone)}})</span>
+          <span class="deadline bold" *ngIf="deadline">{{deadline | date: 'YYYY-MM-dd HH:mm'}}</span>
         </div>
         <div class="date_row">
           <span class="deadline" translate="COMPONENTS.TOPIC_VOTE_DEADLINE.LBL_TIMEZONE"></span>
