--- a/src/app/ideation/components/idea/idea-dialog.component.scss
+++ b/src/app/ideation/components/idea/idea-dialog.component.scss
@@ -28,6 +28,8 @@
   width: 100%;
   display: flex;
   align-items: center;
+  overflow-x: clip;
+
   @include mixins.mobile {
     background-color: var(--color-background);
   }
@@ -114,6 +116,26 @@
     flex-direction: column;
     height: 100%;
   }
+
+  .idea_folders_wrap {
+    display: flex;
+    padding: 8px 12px 8px 8px;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+    border-radius: 8px;
+    background-color: var(--color-surface-contrast);
+
+    .text {
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 16px;
+      display: flex;
+      gap: 4px;
+
+    }
+  }
 }
 
 .idea_content_idea {
@@ -171,7 +193,7 @@
       .date {
         font-size: 13px;
         line-height: 16px;
-        color: #727C84;
+        color: #727c84;
       }
     }
     .avatar {
@@ -411,7 +433,7 @@
 }
 .tooltip_item {
   position: absolute;
-  left:0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
