--- a/src/app/topic/topic.component.scss
+++ b/src/app/topic/topic.component.scss
@@ -218,10 +218,11 @@
           justify-content: center;
           z-index: 3;
           padding: 24px;
-          @include mixins.mobile {
-            padding: 8px 16px;
-          }
+          background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.90) 100%);
+          height: 144px;
           button {
+            position: absolute;
+            bottom: 16px;
             width: 100%;
             position: relative;
             box-shadow: 0px 8px 20px 0px rgba(220, 231, 240, 0.30);
