--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
@@ -94,6 +94,7 @@
     gap: 32px;
     padding: 16px;
     background-color: var(--color-dialog-ideation-contrast);
+    border-radius: 8px;
 
     .ideation_text_left,
     .ideation_text_right {
